--- a/style.css
+++ b/style.css
@@ -1,22 +1,49 @@
 div{
     width: 50%;
+    height: 50%;
+    display: inline;
+    margin: 0%;
+    padding: 0%;
+}
+
+div:hover{
+    transform: translateY(-5px);
+}
+
+.container{
+    display: table;
 }
 
 #pays{
     color:white;
     background-color: rgb(211, 56, 89);
-    border-radius: 5%;
+    border-radius: 3%;
+    text-align: center;
+    width: 300px;
+    overflow: hidden;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;;
+    transition: 0.1s;
 }
 
 #equipe{
     color: black;
     background-color: rgb(20, 220, 255);
-    border-radius: 5%;
+    border-radius: 3%;
+    text-align: center;
+    width: 300px;
+    overflow: hidden;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;;
+    transition: 0.1s;
 }
 
 #joueur{
     color: white;
     background-color: rgb(13, 110, 102);
-    border-radius: 5%;
+    border-radius: 3%;
+    text-align: center;
+    width: 300px;
+    overflow: hidden;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;;
+    transition: 0.1s;
 }
 
